results/SVCOMP/conversational/log-arraylength1-2024_03_08_05_54_29.txt
class arraylength1 {
    //@ requires size >= 0;
    //@ ensures \result == -1 && size < 0 || \result == 0 && int_array.length != size || \result == 1 && int_array.length == size;
    public static int func(int size) {
        if (size < 0) return -1;
        int int_array[] = new int[size];

        if(int_array.length != size)
            return 0;
        return 1;
    }
}
/home/max/Documents/JMLGPT/tmp/arraylength1.java:3: error: cannot find symbol
    //@ ensures \result == -1 && size < 0 || \result == 0 && int_array.length != size || \result == 1 && int_array.length == size;
                                                             ^
  symbol:   variable int_array
  location: class arraylength1
/home/max/Documents/JMLGPT/tmp/arraylength1.java:3: error: cannot find symbol
    //@ ensures \result == -1 && size < 0 || \result == 0 && int_array.length != size || \result == 1 && int_array.length == size;
                                                                                                         ^
  symbol:   variable int_array
  location: class arraylength1
2 errors

class arraylength1 {
    //@ requires size >= 0;
    //@ ensures \result == -1 && size < 0 || \result == 0 || \result == 1;
    public static int func(int size) {
        if (size < 0) return -1;
        int int_array[] = new int[size];

        if(int_array.length != size)
            return 0;
        return 1;
    }
}

